# askama-axum-rust-template

./: .gitignore  Cargo.toml
assets/: theme.css
src/: main.rs  settings.rs  templates.rs
templates/: template.html
