[package]
name = "askama-axum-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.1" }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
askama = { version = "0.11.1" }
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
tower-http = { version = "0.3.5", features = ["fs"] }
